@@ -17,8 +17,9 @@ group.references= All Re&ferences
 Search.Error.search.title=Search Error
 Search.Error.search.message=An error occurred during the search operation
 
-CSearchResultCollector.match= 1 match
-CSearchResultCollector.matches= {0} matches
+# Examples of the display for the following value are 
+# "(1 match)", where {0} is 1 and "(5 matches)", where {0} is 2 or more.
+CSearchResultCollector.matches= ({0} {0, choice, 1\#match|2\#matches})
 CSearchResultCollector.done= Search done: {0}.
 CSearchResultCollector.searching= Searching...
 
